@@ -1,4 +1,8 @@
-2007-07-10 Erik Hjortsberg  <erik.hjortsberg@iteam.se>
+2007-07-11 Erik Hjortsberg  <erik.hjortsberg@iteam.se>
+
+	* src/components/ogre/GUIManager.cpp: disable entity picking when in movement mode
+
+2007-07-11 Erik Hjortsberg  <erik.hjortsberg@iteam.se>
 
 	* src/components/ogre/environment/caelum/include/CaelumListener.h, src/components/ogre/environment/caelum/include/CameraBoundElement.h, src/components/ogre/environment/caelum/include/SkyDome.h, src/components/ogre/environment/caelum/include/Starfield.h, src/components/ogre/environment/caelum/include/Sun.h, src/components/ogre/environment/caelum/include/SunPositionModel.h, src/components/ogre/environment/caelum/src/GeometryFactory.cpp, src/components/ogre/jesus/JesusMousePicker.cpp, src/components/ogre/model/Model.cpp, src/components/ogre/model/Model.h, src/components/ogre/model/ModelDefinition.cpp, src/components/ogre/model/ModelDefinition.h, src/components/ogre/model/ParticleSystemBinding.cpp, src/components/ogre/ogreopcode/src/OgreOpcodeCharacterController.cpp, src/components/ogre/terrain/TerrainPage.cpp, src/components/ogre/terrain/TerrainShader.cpp: cleaned up code
 
